include/altdss/capi/dss.h

    /*! 
    Complex double array of Sequence Voltage for all terminals of active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CplxSeqVoltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages_GR(void);
    /*! 
    Complex double array of Sequence Currents for all conductors of all terminals of active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CplxSeqCurrents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents_GR(void);
    /*! 
    Array of strings listing all the published variable names, if a PCElement. Otherwise, null string.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Array of doubles. Values of state variables of active element if PC element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableValues(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_AllVariableValues but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllVariableValues_GR(void);
    /*! 
    For PCElement, set/get the value of a variable by name. If Code>0 Then no variable by this name or not a PCelement.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_Variable(const char* MyVarName, int32_t *Code);
    ALTDSS_CAPI_DLL void CktElement_Set_Variable(const char* MyVarName, int32_t *Code, double Value);
    /*! 
    For PCElement, set/get the value of a variable by integer index.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_Variablei(int32_t Idx, int32_t *Code);
    ALTDSS_CAPI_DLL void CktElement_Set_Variablei(int32_t Idx, int32_t *Code, double Value);
    /*! 
    Array of integer containing the node numbers (representing phases, for example) for each conductor of each terminal.
    Be sure to run a solution to initialize the values after the circuit is created or modified.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeOrder(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_NodeOrder but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeOrder_GR(void);
    /*! 
    True if a recloser, relay, or fuse controlling this ckt element. OCP = Overcurrent Protection
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasOCPDevice(void);
    /*! 
    Number of controls connected to this device. Use to determine valid range for index into Controller array.
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumControls(void);
    /*! 
    Index into Controller list of OCP Device controlling this CktElement
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_OCPDevIndex(void);
    /*! 
    0=None; 1=Fuse; 2=Recloser; 3=Relay;  Type of OCP controller device
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_OCPDevType(void);
    /*! 
    Currents in magnitude, angle (degrees) format as a array of doubles.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CurrentsMagAng(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_CurrentsMagAng but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CurrentsMagAng_GR(void);
    /*! 
    Voltages at each conductor in magnitude, angle form as array of doubles.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_VoltagesMagAng(double** ResultPtr, int32_t* ResultDims);